Fixed bugs on Iphone

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1092,6 +1092,9 @@ body.lock {
   height: 6px;
   background: linear-gradient(90deg, #288FB1, 15%, #000, 85%, #288FB1);
 }
+.portfolio__item:nth-child(4) .feature-portfolio__container .feature-portfolio__body:nth-child(3) .item-feature:nth-child(1) .item-feature__img::after {
+  display: none;
+}
 .portfolio__image {
   height: 600px;
   position: relative;
