--- a/resources/css/scss/home.scss
+++ b/resources/css/scss/home.scss
@@ -109,6 +109,17 @@
             background: linear-gradient(90deg, #288FB1, 15%, #000, 85%, #288FB1,);
          }*/
       }
+      &:nth-child(4){
+         .feature-portfolio__container{
+            .feature-portfolio__body:nth-child(3){
+               .item-feature:nth-child(1){
+                  .item-feature__img::after{
+                     display: none;
+                  }
+               }
+            }
+         }
+      }
    }
 
   /* &__body{
